k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: atom
  labels:
    app.kubernetes.io/part-of: atom-support-vision
